# tbc-stratum

./: NOTICE.md
common/: Cargo.toml
protocols/v1/src/: lib.rs
protocols/v1/src/methods/: client_to_server.rs  mod.rs
protocols/v2/noise-sv2/: Cargo.toml
protocols/v2/roles-logic-sv2/: Cargo.toml
protocols/v2/roles-logic-sv2/src/: errors.rs  job_creator.rs  job_creator_diff.txt  utils.rs
protocols/v2/roles-logic-sv2/src/channel_logic/: channel_factory.rs  mod.rs
protocols/v2/roles-logic-sv2/src/handlers/: common.rs  mining.rs
protocols/v2/subprotocols/mining/: Cargo.toml
protocols/v2/subprotocols/mining/src/: lib.rs
roles/: Cargo.toml
roles/jd-client/: Cargo.toml
roles/jd-client/config-examples/: jdc-config-hosted-example.toml  jdc-config-local-example.toml
roles/jd-client/src/: main.rs
roles/jd-client/src/lib/: downstream.rs  proxy_config.rs
roles/jd-server/config-examples/: jds-config-hosted-example.toml  jds-config-local-example.toml
roles/jd-server/src/: main.rs
roles/jd-server/src/lib/mempool/: mod.rs
roles/mining-proxy/config-examples/: proxy-config-example.toml
roles/mining-proxy/src/lib/: downstream_mining.rs  upstream_mining.rs
roles/pool/: Cargo.toml
roles/pool/config-examples/: nohup.out  pool-config-hosted-tp-example.toml  pool-config-local-tp-example.toml
roles/pool/src/: main.rs
roles/test-utils/sv1-mining-device/: Cargo.toml
roles/translator/config-examples/: tproxy-config-local-jdc-example.toml  tproxy-config-local-pool-example.toml
roles/translator/src/: main.rs
utils/: Cargo.toml
utils/rpc/: Cargo.toml
(+9 files in other folders)
