[package]
name = "stratum-common"
version = "1.0.0"
edition = "2018"
description = "SV2 pool role"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"

[dependencies]
bitcoin = { git = "ssh://git@github.com/LoongYearMeta/rust-turingbitchain.git", branch = "main", optional = true }
